force-app/main/default/objects/Account/fields/Hobbies1__c.field-meta.xml
<CustomField>
    <fullName>Hobbies1__c</fullName>
    <label>Hobbies1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>