force-app/main/default/objects/Account/fields/Hobbies_1__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_1__c</fullName>
    <label>Hobbies 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>