force-app/main/default/objects/Account/fields/Hobbies_2__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_2__c</fullName>
    <label>Hobbies 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>